dev -fixed layout issue

--- a/src/app/components/MainTable/style.css
+++ b/src/app/components/MainTable/style.css
@@ -52,6 +52,19 @@ table {
 }
 
 @media screen and (max-width: 650px) {
+  .card {
+    flex: 100%;
+  }
+  .cardItem {
+    width: 100%;
+  }
+
+  .cardTitleSection {
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+  }
   .tableTitle {
     font-size: 12px;
   }
