--- a/src/app/components/ProjectList/style.css
+++ b/src/app/components/ProjectList/style.css
@@ -10,12 +10,13 @@
   font-weight: 700;
   width: 20%;
   text-align: center;
+  padding: 8px 0;
 }
 
 .projectThumbnail {
-  aspect-ratio: 3/2;
+  aspect-ratio: 16/9;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .projectTable dd {
@@ -71,6 +72,6 @@
     font-size: 10px;
   }
   .projectThumbnail {
-    width: 5%;
+    width: 45%;
   }
 }
